src/components/number-input/number-input.scss
.rp-number-input {
    --_rp-number-input-control-size: var(--_rp-input-height);
    --_rp-number-input-text-align: left;

    overflow: hidden;
    vertical-align: middle;

    :deep(.rp-input__native) {
        appearance: textfield;
        text-align: var(--_rp-number-input-text-align);
    }

    &--text-align-center {
        --_rp-number-input-text-align: center;
    }

    &--text-align-right {
        --_rp-number-input-text-align: right;
    }

    :deep(.rp-input__native)::-webkit-inner-spin-button,
    :deep(.rp-input__native)::-webkit-outer-spin-button {
        margin: 0;
        appearance: none;
    }

    :deep(.rp-input__left),
    :deep(.rp-input__right) {
        align-self: stretch;
        margin-block: calc(-1 * var(--rp-border-width-thin));
    }

    :deep(.rp-input__left) {
        margin-inline-start: calc(-1 * var(--_rp-input-padding-x));
    }

    :deep(.rp-input__right) {
        margin-inline-end: calc(-1 * var(--_rp-input-padding-x));
    }

    &__controls {
        display: inline-flex;
        height: var(--_rp-input-height);
        flex-shrink: 0;

        &--left {
            border-inline-end: var(--rp-border-width-thin) solid var(--rp-color-control-border);
        }

        &--right {
            border-inline-start: var(--rp-border-width-thin) solid var(--rp-color-control-border);
        }
    }

    &__control {
        @include reset-button;
        @include flex-center;
        width: var(--_rp-number-input-control-size);
        height: 100%;
        min-width: 0;
        min-height: 0;
        color: var(--rp-color-control-icon);
        transition:
            color var(--rp-transition-fast),
            background-color var(--rp-transition-fast),
            opacity var(--rp-transition-fast);

        + .rp-number-input__control {
            border-inline-start: var(--rp-border-width-thin) solid var(--rp-color-control-border);
        }

        &:hover:not(:disabled) {
            color: var(--rp-color-control-fg);
            background-color: var(--rp-color-default-hover);
        }

        &:disabled {
            cursor: not-allowed;
            opacity: var(--rp-opacity-disabled);
        }
    }

    &__control-icon {
        @include inline-icon(0.875em);

        > :deep(svg) {
            display: block;
            width: 100%;
            height: 100%;
        }
    }
}

